# kampisos

./: .eslintrc.json  .gitignore  README.md  char_alignment.ts  compose.yml  eslint.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yaml  playwright.yml  semgrep.yml
.storybook/: decorator.tsx  preview.ts
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
cli/src/commands/: kampisos_init.rs  kampisos_sync.rs  mod.rs
cli/src/models/: article.rs  dialect.rs  mod.rs  sentence.rs
e2e/: about.spec.ts  home.spec.ts  search.spec.ts
messages/: ain-Kana.json  ain-Latn.json  ja.json
public/: freq_ain.tsv  freq_ja.tsv  freq_jpn.tsv  words_ain.tsv  words_jpn.tsv
scripts/: fetch-geodata.ts  kana.ts
src/: proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.txt  sitemap.ts
src/hooks/: useDialectFormatter.ts
src/i18n/: request.ts  routing.ts
src/lib/: build.spec.ts  build.ts  dayjs-ain-kana.ts  dayjs-ain-latn.ts  dayjs.ts  microcms.ts  search.ts
src/models/: alignment.spec.ts  alignment.ts  changelog.ts  entry.ts
src/utils/: alignment.ts  array.spec.ts  array.ts  buildFiltersFromFacets.test.ts  buildFiltersFromFacets.ts  deepMerge.spec.ts  deepMerge.ts  fetchComplexFacets.ts  getMostDetailedDialects.spec.ts  getMostDetailedDialects.ts  matrix.spec.ts  matrix.ts  pages.ts  parse.tsx  timestamp.ts  toArraySearchParam.spec.ts  (+3 more)
web/: .eslintcache  .gitignore  LICENSE  package-lock.json  package.json  vitest.config.mts  vitest.config.ts
(+96 files in other folders)
